test/conformance/chainsaw/validating-policies/autogen/should-not-autogen/check-autogen.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
status:
  autogen: {}
