test/conformance/chainsaw/validating-policies/autogen/should-not-autogen/policy-assert.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
status:
  conditionStatus:
    conditions:
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
    - message: 'Policy is not ready for reporting, missing permissions: get /v1,
        Resource=deployments: ; list /v1, Resource=deployments: ; watch /v1, Resource=deployments: .'
      reason: Failed
      status: "False"
      type: RBACPermissionsGranted
