test/conformance/chainsaw/validating-policies/autogen/should-not-autogen/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: should-not-autogen
spec:
  steps:
  - name: create policy
    try:
    - create:
        file: policy.yaml
    - sleep:
        duration: 2s
  - name: check autogen policy
    try:
    - assert:
        file: check-autogen.yaml
